# VideoGameEsp32

./: .cproject  .gitignore  .project  partitions.csv
components/lvgl_esp32_drivers/: CMakeLists.txt
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  ili9341.c  ili9488.c
components/ssd1306/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
